:bug: fix featured homepage image z-index

--- a/styles/Featured.module.css
+++ b/styles/Featured.module.css
@@ -5,10 +5,10 @@
     text-align: center;
     color: var(--brand-text);
     height: 32rem;
+    position: relative;
 }
 
-.shadow
-{
+.shadow {
   position: relative;
   box-shadow:0px 40px 20px -30px rgba(0,0,0,0.2), 0px 10px 10px -10px rgba(0,0,0,0.5);;
 }
@@ -24,6 +24,10 @@
     margin: 1rem 2rem
 }
 
+.hdr_text {
+    position: relative;
+    z-index: 2;
+}
 
 .photo {
     position: absolute;
@@ -32,7 +36,7 @@
     height: 500px;
     width: 1025px;
     margin: 0;
-    z-index: 10;
+    z-index: 0;
 }
 
 @media screen and (min-width: 800px) {
